# sap

./: .cirrus.yml  .gitignore  Cargo.toml  Cross.toml  README.md  flake.nix  rust-toolchain
.github/workflows/: ci.yml
examples/: derive.rs  eq.rs  no_std.rs  tst.rs  windows.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_garbage.rs  raw_bytes.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: valid_utf16.rs
src/: lib.rs  main.rs  unix.rs  win32.rs
tests/: error_handling.rs  parser.rs  short_options.rs  values.rs  windows.rs
treesap/: Cargo.toml  README.md
treesap/examples/: derive.rs
treesap/macros/: Cargo.toml
treesap/macros/src/: lib.rs
treesap/src/: lib.rs
