[workspace]
members = ["treesap"]

[package]
name = "sap"
version = "0.0.7"
edition = "2024"
rust-version = "1.85"
description = "A small, simple and sweet argument parser for Rust"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/tailwags/sap"
readme = "README.md"
documentation = "https://docs.rs/sap"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
itoa = "1.0.15"
