[workspace]
members = ["treesap", "treesap/macros"]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
authors = ["Matilde Morrone <contact@matilde.pet>"]
repository = "https://github.com/tailwags/sap"

[package]
name = "sap"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A small, simple and sweet argument parser for Rust"
readme = "README.md"
documentation = "https://docs.rs/sap"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
itoa = "1.0.17"
