[package]
name = "sap-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sap]
path = ".."

[[bin]]
name = "parser_garbage"
path = "fuzz_targets/parser_garbage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "raw_bytes"
path = "fuzz_targets/raw_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "from_env"
path = "fuzz_targets/from_env.rs"
test = false
doc = false
bench = false
