[package]
name = "treesap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A #[derive(Parser)] interface for sap"
readme = "README.md"
documentation = "https://docs.rs/treesap"
include = ["src/**/*.rs", "README.md", "../LICENSE"]

[dependencies]
sap = { version = "0.2.0", path = ".." }
treesap-macros = { version = "0.1.0", path = "macros" }

[dev-dependencies]
anyhow = "1.0.102"
