[package]
name = "treesap-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal proc-macro crate for treesap"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
